# image_parallelization

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  compare_results.sh  convert.py  convert_fixed.py  convert_to_jpg.py  generate_report.sh  new_benchark.sh  robust_convert.py  run_benchmark_and_plot.sh  run_benchmark_and_plot.sh.save  run_benchmark_final2.sh  run_complete_benchmark.sh  run_simple_benchmark.sh
include/: image_processing.h
scripts/: plot_results.py  profile.sh  run_benchmarks.py
src/common/: filters.h  image_io.cpp  image_io.h
src/cuda/: kernels.cuh  pipeline_cuda.cu
src/openmp/: pipeline_omp.cpp
src/profiling/: benchmark.cpp  benchmark.h
src/sequential/: pipeline_seq.cpp
